# OpenCV_FaceDetect_SeverClient

./: CMakeLists.txt  README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  protocol.cpp  protocol.h  uqfaceclient  uqfaceclient.cpp  uqfacedetect  uqfacedetect.cpp
